[tool.poetry]
name = "hackacity-smo-2022"
version = "0.1.0"
description = ""
authors = ["Gonçalo Carito <goncalo.carito@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
Flask = "^2.2.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
